--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts"
+		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+		"typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
 	},
 	"author": "",
 	"license": "ISC",
@@ -13,7 +14,10 @@
 		"cors": "^2.8.5",
 		"express": "^5.1.0",
 		"express-async-errors": "^3.1.1",
+		"pg": "^8.16.0",
+		"reflect-metadata": "^0.2.2",
 		"ts-node-dev": "^2.0.0",
+		"typeorm": "^0.2.45",
 		"typescript": "^5.8.3"
 	},
 	"devDependencies": {
